--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 	<name>mhpl</name>
 	<properties>
 		<java.version>17</java.version>
+                <start-class>com.example.mhpl.GUI.mainFrame</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -34,6 +35,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+                                <configuration>
+                                    <mainClass>${start-class}</mainClass>
+                                </configuration>
 			</plugin>
 		</plugins>
 	</build>
