--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <main-class>com.example.GUI.mainGUI</main-class>
     </properties>
 
     <dependencies>
@@ -51,4 +52,17 @@
             <version>5.2.5</version>
         </dependency>
     </dependencies>
+    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.example</groupId>
+                <artifactId>mhpl</artifactId>
+		<version>1.0-SNAPSHOT</version>
+                <configuration>
+                    <mainClass>${main-class}</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
